Issue 30997: **Default LabKey header has extra spacing on Edge

--- a/core/resources/styles/scss/labkey/_gwt.scss
+++ b/core/resources/styles/scss/labkey/_gwt.scss
@@ -146,3 +146,7 @@
     }
   }
 }
+
+.gwt-label label, .gwt-RadioButton label {
+  font-weight: normal;
+}
